# update-stack-yaml

./: .gitignore  LICENSE  update-stack-yaml.cabal  update-stack-yaml.hs
