name:                update-stack-yaml
version:             0.1.0.0
synopsis:            Update stack.yaml git refs to local repos hashes
description:         Run update-stack-yaml and feed its stdin with lines like:
                     .
                     repo-base-name=local-path/local-repo/.git
                     .
                     And it will update the corresponding git hashes in the local stack.yaml
                     file to the hashes found locally.
license:             BSD3
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable update-stack-yaml
  main-is:             update-stack-yaml.hs
  build-depends:       base >=4
                     , bytestring >= 0.9
                     , filepath >= 1.4
                     , lens >= 4
                     , lens-aeson >= 1
                     , process >= 1.2
                     , text >= 1.2
                     , yaml >= 0.8
  default-language:    Haskell2010